Correciones en el html

--- a/Aplicaciones/Eventos/templates/nuevoPatrocinador.html
+++ b/Aplicaciones/Eventos/templates/nuevoPatrocinador.html
@@ -56,17 +56,17 @@
         },
         messages: {
             "nombre": {
-                required: "Este campo es obligatorio",
+                required: "Por favor llenar este campo",
                 minlength: "Ingrese al menos 3 caracteres",
                 maxlength: "Máximo 100 caracteres permitidos"
             },
             "industria": {
-                required: "Este campo es obligatorio",
+                required: "Por favor llenar este campo",
                 minlength: "Ingrese al menos 3 caracteres",
                 maxlength: "Máximo 100 caracteres permitidos"
             },
             "logo_patrocinador": {
-                required: "Este campo es obligatorio",
+                required: "Por favor llenar este campo",
                 extension: "Solo se permiten archivos de imagen (jpg, jpeg, png, gif)"
             }
         }
