12 Correciones en el html2.0

--- a/Aplicaciones/Eventos/templates/nuevoEvento.html
+++ b/Aplicaciones/Eventos/templates/nuevoEvento.html
@@ -81,7 +81,7 @@
         },
         messages: {
             "nombre": {
-                required: "Este campo es obligatorio",
+                required: "Este campo es necesario de llenar",
                 minlength: "Ingrese al menos 3 caracteres",
                 maxlength: "Máximo 100 caracteres permitidos"
             },
