--- a/Aplicaciones/Eventos/templates/listarEventoPatrocinador.html
+++ b/Aplicaciones/Eventos/templates/listarEventoPatrocinador.html
@@ -20,7 +20,7 @@
             <th>Patrocinador</th>
             <th>Aporte Económico</th>
             <th>Contrato PDF</th>
-            <th>Fecha de Creación</th>
+            <th>Fecha de Creación</th> <!-- Cambios realizados-->
             <th>Última Actualización</th>
             <th>Acciones</th>
         </tr>
