--- a/Aplicaciones/Eventos/templates/plantilla.html
+++ b/Aplicaciones/Eventos/templates/plantilla.html
@@ -72,7 +72,7 @@
     </a>
     <a href="#" class="logo d-flex align-items-center justify-content-center">
       <a href="#" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename">Javier Pilco</h1><br>
+      <h1 class="sitename">Admin: Javier Pilco</h1><br>
     </a>
       
     </a>
